// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list item render correctly with role 1`] = `
.c0 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  margin: 0px;
}

.c2 {
  float: right;
  width: 80px;
  padding: 4px;
  font-weight: bold;
  text-align: center;
  border-radius: 6px;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    test
  </p>
  <p
    className="c2"
  >
    admin
  </p>
</div>
`;

exports[`user list item render correctly without role 1`] = `
.c0 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  margin: 0px;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    test
  </p>
</div>
`;
